jilles      2006/07/01 23:52:50 UTC	(20060701-5630)
  Log:
  Make mc in hook_channel_req_t of type struct mychan_ * instead of void *.
  

  Changes:	Modified:
  +1 -2		trunk/include/atheme.h (File Modified) 


jilles      2006/07/01 23:38:42 UTC	(20060701-5628)
  Log:
  Add callbacks for non-standard type C channel modes
  (forwarding, join throttling, etc).
  

  Changes:	Modified:
  +9 -0		trunk/include/atheme.h (File Modified) 
  +1 -1		trunk/include/phandler.h (File Modified) 
  +1 -1		trunk/protocol/asuka.c (File Modified) 
  +1 -1		trunk/protocol/bahamut.c (File Modified) 
  +1 -1		trunk/protocol/bircd.c (File Modified) 
  +64 -3	trunk/protocol/charybdis.c (File Modified) 
  +1 -1		trunk/protocol/dreamforge.c (File Modified) 
  +1 -1		trunk/protocol/hybrid.c (File Modified) 
  +47 -4	trunk/protocol/hyperion.c (File Modified) 
  +54 -4	trunk/protocol/inspircd.c (File Modified) 
  +1 -1		trunk/protocol/ircnet.c (File Modified) 
  +1 -1		trunk/protocol/nefarious.c (File Modified) 
  +1 -1		trunk/protocol/plexus.c (File Modified) 
  +28 -2	trunk/protocol/ptlink.c (File Modified) 
  +1 -1		trunk/protocol/ratbox.c (File Modified) 
  +1 -1		trunk/protocol/shadowircd.c (File Modified) 
  +1 -1		trunk/protocol/solidircd.c (File Modified) 
  +1 -1		trunk/protocol/sorcery.c (File Modified) 
  +1 -1		trunk/protocol/ultimate3.c (File Modified) 
  +1 -1		trunk/protocol/undernet.c (File Modified) 
  +28 -2	trunk/protocol/unreal.c (File Modified) 
  +2 -0		trunk/src/cmode.c (File Modified) 
  +1 -1		trunk/src/pmodule.c (File Modified) 


jilles      2006/07/01 21:25:55 UTC	(20060701-5626)
  Log:
  Remove an obsolete comment.
  

  Changes:	Modified:
  +0 -1		trunk/include/phandler.h (File Modified) 


jilles      2006/07/01 21:01:30 UTC	(20060701-5624)
  Log:
  flatfile load: don't set an mlocked key if it is empty (after
  stripping), starts with a colon or contains a comma.
  Such keys are invalid and this makes it possible (with