@@ -5,7 +5,7 @@
  * This file contains the implementation of the Atheme 0.1
  * flatfile database format, with metadata extensions.
  *
- * $Id: flatfile.c 5624 2006-07-01 21:01:30Z jilles $
+ * $Id: flatfile.c 5634 2006-07-02 00:05:59Z jilles $
  */
 
 #include "atheme.h"
@@ -13,7 +13,7 @@
 DECLARE_MODULE_V1
 (
 	"backend/flatfile", TRUE, _modinit, NULL,
-	"$Id: flatfile.c 5624 2006-07-01 21:01:30Z jilles $",
+	"$Id: flatfile.c 5634 2006-07-02 00:05:59Z jilles $",
 	"Atheme Development Group <http://www.atheme.org>"
 );
 
@@ -170,7 +170,7 @@ static void flatfile_db_save(void *arg)
 		svsignore = (svsignore_t *)n->data;
 
 		/* SI <mask> <settime> <setby> <reason> */
-		fprintf(f, "SI %s %ld %s %s\n", svsignore->mask, svsignore->settime, svsignore->setby, svsignore->reason);
+		fprintf(f, "SI %s %ld %s %s\n", svsignore->mask, (long)svsignore->settime, svsignore->setby, svsignore->reason);
 	}
 
 
